assets/css/style.css
body {
    background-image: url("./../images/abstract-1779605_640.png");
    background-size: cover;
}
}

header {
    background-color: white;
}

div {
    padding: 2%;
    margin: 2%;
    background-color: white;
    border-color: #dddddd;
}

h1 {
    background-color: white;
    padding: 1%;
}


h2 {
    border-bottom: solid 1px lightgray;
}

#wrapper {
    min-width: fit-content;
}

textarea {
    width: 100%;
    border: 0;
    background-color: rgb(248, 252, 198);
    padding: 2%;
}

#generate {
    background-color: lightgreen;

}

